# raidex

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
deploy/: raidex-packages.txt  ssh-with-env-key.sh
pycif_browser/: Browser.py  cli.py  contexts.py  exporter.py
pycif_browser/themes/FirstLight/: bak_index.html  index.html
pycif_browser/themes/FirstLight/basedir/: browser.css  browser.js  style.css
src/pycif_browser/: Browser.py  __main__.py  cli.py  contexts.py  exporter.py
src/pycif_browser/themes/FirstLight/: index.html
src/pycif_browser/themes/FirstLight/basedir/: browser.js
src/raidex/: Browser.py  __main__.py  cli.py  exporter.py
src/raidex/themes/FirstLight/: index.html
