[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "raidex"
version = "0.0.0"
description = "RAIMAD Package Index"
authors = [
	{name = "maybetree", email = "maybetree48@proton.me"}
	]
license = { text = "I haven't decided yet" }
readme = "README.md"
classifiers = [
	'Programming Language :: Python :: 3',
	]
requires-python = ">=3"
dependencies = [
	'jinja2',
	]

#[tool.setuptools.packages.find]
#include = [ "pycif", "pycif.*" ]
