[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "raidex"
version = "3"
description = "RAIMAD Package Index"
authors = [
	{name = "maybetree", email = "maybetree48@proton.me"}
	]
license = { file = "LICENSE.md" }
readme = "README.md"
classifiers = [
	'Programming Language :: Python :: 3',
	]
requires-python = ">=3"
dependencies = [
	'jinja2',
	]

#[tool.setuptools.packages.find]
#include = [ "pycif", "pycif.*" ]
